# ComSuite

./: .gitignore  LICENSE  README.md  debug_styles.py  main.py  pyproject.toml  requirements.txt  tmp_run_other_registers_test.py  tmp_ui_simulate_other_wizard.py  variadores_modbus.csv
src/: __main__.py  main.py
src/config/: config_manager.py  template_manager.py
src/core/: communication_engine.py  device_manager.py  plugin_loader.py
src/gui/: __init__.py  device_panel.py  main_window.py  style_manager.py  test_styles.py
src/gui/modes/: __init__.py  expert_mode.py  novice_mode.py
src/gui/panels/: __init__.py  connection_panel.py  data_monitor.py  device_panel.py  log_viewer.py
src/gui/styles/: base.qss
src/gui/styles/themes/: dark.qss
src/gui/widgets/: __init__.py  connection_widget.py  device_widget.py  status_widget.py
src/gui/wizards/: __init__.py  connection_wizard.py  device_wizard.py  other_registers_wizard.py
src/plugins/: discovery.py  plugin_interface.py
src/protocols/base_protocol/: __init__.py  device_interface.py  protocol_interface.py
src/protocols/modbus/: master_rtu.py  master_tcp.py  modbus_device.py  modbus_master.py  modbus_plugin.py  modbus_protocol.py  modbus_slave.py  slave_rtu.py  slave_tcp.py
src/utils/: csv_to_sqlite.py
tests/: run_connection_live_test.py  run_device_creation_test.py  test_communication_engine.py  test_integration_completa.py  test_interfaces.py  test_modbus_device.py  test_modbus_plugin.py  test_plugin_loader.py  test_simple.py  test_template_manager.py
