[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comtools"
version = "0.0.0"
description = "ComSuite tools - suite de configuración de dispositivos industriales"
authors = ["ComSuite Team <dev@comsuite.local>"]
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["src"]
